--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -5,7 +5,7 @@
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/transparent_white"/>
+            <solid android:color="@color/white_transparent"/>
         </shape>
     </item>
     <item android:width="250dp" android:height="250dp" android:gravity="center">
