--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rcvHome"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Home here"/>
+        android:nestedScrollingEnabled="true"/>
 
 </android.support.constraint.ConstraintLayout>
