--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -5,10 +5,10 @@
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/white_transparent"/>
+            <solid android:color="#50ffffff"/>
         </shape>
     </item>
-    <item android:width="150dp" android:height="75dp" android:gravity="center">
-        <bitmap android:src="@drawable/banner" android:tint="@android:color/black"/>
+    <item android:width="150dp" android:height="150dp" android:gravity="center">
+        <bitmap android:src="@drawable/logo"/>
     </item>
 </layer-list>
