--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -14,22 +14,30 @@
         <ImageView
             android:id="@+id/imgThumb"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="210dp"
             android:src="@drawable/capa"
+            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
             android:transitionName="thumb"/>
 
-        <TextView
-            android:id="@+id/txtTitle"
+        <FrameLayout
             android:layout_gravity="bottom"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:layout_marginLeft="120dp"
-            android:textStyle="bold"
-            android:layout_marginBottom="5dp"
-            android:text="teste"
-            android:transitionName="title"/>
+            android:background="@color/black_transparent">
+
+            <TextView
+                android:id="@+id/txtTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:layout_marginLeft="120dp"
+                android:textStyle="bold"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:transitionName="title"/>
+
+        </FrameLayout>
 
     </FrameLayout>
 
