--- a/app/src/main/res/layout/activity_abstract.xml
+++ b/app/src/main/res/layout/activity_abstract.xml
@@ -2,26 +2,27 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="?colorPrimary"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?colorPrimary">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:liftOnScroll="true"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:liftOnScroll="true">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:contentInsetLeft="0dp"
-            app:contentInsetStart="0dp"
-            app:contentInsetRight="0dp"
-            app:contentInsetEnd="0dp"
             android:theme="@style/ToolbarColors"
+            app:contentInsetEnd="0dp"
+            app:contentInsetLeft="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetStart="0dp"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
             app:titleTextColor="@android:color/black">
 
             <FrameLayout
@@ -33,18 +34,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    app:queryHint="Pesquisar por mangas"
-                    android:theme="@style/SearchViewColors"/>
+                    android:theme="@style/SearchViewColors"
+                    app:queryHint="Procurar podcasts" />
 
                 <ImageView
                     android:id="@+id/imgLogo_Default"
                     android:layout_width="wrap_content"
-                    android:adjustViewBounds="true"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginLeft="20dp"
-                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
                     android:scaleType="centerInside"
-                    android:src="@drawable/banner"/>
+                    android:src="@drawable/banner" />
 
             </FrameLayout>
 
@@ -52,12 +53,12 @@
 
         <ProgressBar
             android:id="@+id/pgrBar_Deafult"
+            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="3dp"
-            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
             android:indeterminate="true"
-            android:visibility="invisible"
-            android:scaleY="3"/>
+            android:scaleY="3"
+            android:visibility="invisible" />
 
     </android.support.design.widget.AppBarLayout>
 
@@ -69,96 +70,143 @@
 
         <FrameLayout
             android:id="@+id/defaultContainer"
-            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
-        </FrameLayout>
+    </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/lnlBottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:animateLayoutChanges="true"
+        android:orientation="vertical">
 
-
-        <FrameLayout
-            android:layout_gravity="bottom"
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardPlayer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:visibility="gone"
+            android:transitionName="cardplayer"
+            app:cardBackgroundColor="?colorPrimary"
+            app:cardCornerRadius="3dp">
 
-            <LinearLayout
-                android:id="@+id/lnlPlayer"
-                android:layout_margin="5dp"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:visibility="gone">
+                android:background="@drawable/border_square">
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:id="@+id/lnlPlayer"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:layout_margin="5dp"
+                    android:orientation="horizontal"
+                    android:visibility="visible">
 
-                    <TextView
-                        android:id="@+id/txtTitle"
+                    <ImageView
+                        android:id="@+id/imgInfo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:singleLine="true"
-                        android:textStyle="bold"
-                        android:layout_marginBottom="3dp"/>
-
-                    <SeekBar
-                        android:id="@+id/skbPlayerProgress"
-                        style="@style/Widget.AppCompat.SeekBar"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_gravity="center"
+                        android:layout_margin="3dp"
+                        android:src="@drawable/ic_info_outline"
+                        android:tint="?android:textColor" />
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="15dp"
-                        android:paddingRight="15dp"
-                        android:orientation="horizontal">
+                        android:layout_weight="1"
+                        android:orientation="vertical">
 
-                        <FrameLayout
-                            android:layout_width="0dp"
+                        <TextView
+                            android:id="@+id/txtTitle"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1">
+                            android:layout_marginBottom="3dp"
+                            android:singleLine="true"
+                            android:textStyle="bold" />
 
-                            <TextView
-                                android:id="@+id/txtCurrentTime"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textSize="10dp" />
+                        <SeekBar
+                            android:id="@+id/skbPlayerProgress"
+                            style="@style/Widget.AppCompat.SeekBar"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
 
-                        </FrameLayout>
-
-                        <FrameLayout
-                            android:layout_width="0dp"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1">
+                            android:orientation="horizontal"
+                            android:paddingLeft="15dp"
+                            android:paddingRight="15dp">
 
-                            <TextView
-                                android:id="@+id/txtDuration"
-                                android:layout_width="wrap_content"
+                            <FrameLayout
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="right"
-                                android:textSize="10dp"/>
+                                android:layout_weight="1">
 
-                        </FrameLayout>
+                                <TextView
+                                    android:id="@+id/txtCurrentTime"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="10dp" />
+
+                            </FrameLayout>
+
+                            <FrameLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1">
+
+                                <TextView
+                                    android:id="@+id/txtDuration"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="right"
+                                    android:textSize="10dp" />
+
+                            </FrameLayout>
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
+                    <ImageView
+                        android:id="@+id/imgPlayPause"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="3dp"
+                        android:src="@drawable/ic_play_circle"
+                        android:tint="?android:textColor" />
+
+                    <ImageView
+                        android:id="@+id/imgClose"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="3dp"
+                        android:rotation="45"
+                        android:src="@drawable/ic_add_circle"
+                        android:tint="?android:textColor" />
+
                 </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/imgPlayPause"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:tint="?android:textColor"
-                    android:src="@drawable/ic_play_circle"/>
+            </FrameLayout>
 
-            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
-        </FrameLayout>
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/bnvMain_Main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="?colorPrimary"
+            app:itemIconTint="?android:textColor"
+            app:menu="@menu/navigation" />
 
     </LinearLayout>
 
@@ -167,8 +215,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:visibility="gone"
         android:layout_margin="@dimen/fab_margin"
+        android:visibility="gone"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
