--- a/app/src/main/res/layout/activity_abstract.xml
+++ b/app/src/main/res/layout/activity_abstract.xml
@@ -81,7 +81,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:animateLayoutChanges="true"
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
@@ -89,7 +88,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:visibility="gone"
             android:transitionName="cardplayer"
             app:cardBackgroundColor="?colorPrimary"
             app:cardCornerRadius="3dp">
@@ -97,6 +95,7 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:animateLayoutChanges="true"
                 android:background="@drawable/border_square">
 
                 <LinearLayout
@@ -105,7 +104,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:orientation="horizontal"
-                    android:visibility="visible">
+                    android:visibility="gone">
 
                     <ImageView
                         android:id="@+id/imgInfo"
