--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,60 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?colorPrimary"
     tools:context=".details.DetailsActivity">
 
-    <FrameLayout
-        android:id="@+id/frameThumb"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/imgThumb"
-            android:layout_width="match_parent"
-            android:layout_height="210dp"
-            android:src="@drawable/capa"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"
-            android:transitionName="thumb"/>
+        android:layout_height="match_parent">
 
         <FrameLayout
-            android:layout_gravity="bottom"
+            android:id="@+id/frameThumb"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/black_transparent">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/txtTitle"
-                android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/imgThumb"
+                android:layout_width="match_parent"
+                android:layout_height="210dp"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/capa"
+                android:transitionName="thumb" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/white"
-                android:layout_marginLeft="120dp"
-                android:textStyle="bold"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:transitionName="title"/>
+                android:layout_gravity="bottom"
+                android:background="@color/black_transparent">
+
+                <TextView
+                    android:id="@+id/txtTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="120dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold"
+                    android:transitionName="title" />
+
+            </FrameLayout>
 
         </FrameLayout>
 
-    </FrameLayout>
+        <android.support.v7.widget.CardView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_below="@id/frameThumb"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="-50dp"
+            app:cardBackgroundColor="?colorControlNormal">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_below="@id/frameThumb"
-        android:layout_marginTop="-50dp"
-        app:cardBackgroundColor="?colorControlNormal"
-        android:layout_marginLeft="10dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:src="@drawable/logo" />
 
-        <ImageView
-            android:layout_margin="10dp"
+        </android.support.v7.widget.CardView>
+
+        <LinearLayout
+            android:id="@+id/lnlDuration"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/frameThumb"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="120dp"
+                android:text="Duração: --:--"
+                android:textSize="17dp" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/imgSave"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="end"
+                    android:background="@drawable/ic_saved_in"
+                    android:backgroundTint="@color/white_transparent"
+                    android:padding="2dp"
+                    android:src="@drawable/ic_saved_off"
+                    android:tag="unselected"
+                    android:transitionName="save" />
+
+            </FrameLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/logo"/>
+            android:layout_below="@id/lnlDuration"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="100dp"
+            android:orientation="vertical">
 
-    </android.support.v7.widget.CardView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginRight="20dp"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-</RelativeLayout>
+                <Button
+                    android:id="@+id/btnPlayButton"
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/rounded_button"
+                    android:drawableStart="@drawable/ic_play_circle"
+                    android:paddingLeft="5dp"
+                    android:text="Tocar epsodio"
+                    android:textColor="@android:color/black"
+                    android:transitionName="playbtn" />
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="10dp"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_download_outlined" />
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_more_outlined" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/txtDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</android.support.v4.widget.NestedScrollView>
