--- a/app/src/main/res/layout/cel_thumb.xml
+++ b/app/src/main/res/layout/cel_thumb.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardThumb_Cellthumb"
@@ -81,6 +82,7 @@
                     android:id="@+id/imgPlay_Cellthumb"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:transitionName="playbtn"
                     android:layout_gravity="center"
                     android:tint="@android:color/white"
                     android:src="@drawable/ic_play_circle" />
@@ -97,4 +99,10 @@
 
     </android.support.v7.widget.CardView>
 
-</FrameLayout>
+    <FrameLayout
+        android:id="@+id/frmGap"
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:visibility="gone"/>
+
+</LinearLayout>
